--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,6 +16,7 @@
     
     <app-additional-tables></app-additional-tables>
     <app-stocks-information></app-stocks-information>
+    <app-reports></app-reports>
     <app-news></app-news>
     <app-contact-us></app-contact-us>
     <app-contact></app-contact>
