--- a/src/app/components/home/stocks-information/stocks-information.component.html
+++ b/src/app/components/home/stocks-information/stocks-information.component.html
@@ -2,7 +2,7 @@
     <div class="jobs" [dir]="'Direction' | translate">
       <div class="container" data-aos="fade-up" data-aos-duration="1000">
         <div class="container" [dir]="'Direction' | translate">
-          <h3 class="section-title">{{ "Stocks Information" | translate }}</h3>
+          <h3 class="section-title">{{ "Companies Information" | translate }}</h3>
         </div>
         <div class="jobs-inner">
           <div class="summary-tabs mx-2">
