--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <!-- Logo and Contact Information -->
-      <div class="col-md-4">
+      <div class="col-md-4 text-center">
         <img src="assets/images/pioLogo.png" alt="{{ 'footer.logoAlt' | translate }}" class="footer-logo mb-4" style="background-color: white;">
         <!-- <p class="company-description">
           {{ 'footer.companyDescription' | translate }}
