adding card list with support for mobile and desktop aspect ratio

--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -6,25 +6,36 @@
                {{"CoreValues.Title" | translate}}
             </h3>
         </div> -->
-       
+
         <div class="jobs-inner">
             <div class="text-center p-2 mx-2 head-text"> <h2>{{"CoreValues.Title"| translate}} </h2></div>
-            <div class="row space-row">
-                <div class="col-3 w-50 h-25 p-2 position-relative">
-                    <img [src]="'Integrity.Image' | translate" class="img-fluid border rounded" alt="{{ 'Integrity' | translate }}">
+            <div class="cards-holder">
+                <div class="col-3 w-50 h-25 p-2 position-relative card-container">
+                    <div class="card-content">
+                      <img src="assets/images/aerial-view-business-team.jpg" class="border rounded" alt="{{ 'Integrity' | translate }}">
+                    </div>
+                  <div class="card-text">Hello,world</div>
                 </div>
-                <div class="col-3 w-50 h-25 p-2">
-                    <img [src]="'Loyalty.Image' | translate" class="img-fluid border rounded" alt="{{ 'Loyalty' | translate }}">
+                <div class="col-3 w-50 h-25 p-2 card-container">
+                  <div class="card-content">
+                    <img src="assets/images/businessman-with-light-bulb-his-hand.jpg" class="border rounded" alt="{{ 'Loyalty' | translate }}">
+                  </div>
+                  <div class="card-text">Hello,world</div>
                 </div>
-                <div class="col-3 w-50 h-25 p-2">
-                    <img [src]="'Creativity.Image' | translate" class="img-fluid border rounded" alt="{{ 'Creativity' | translate }}">
+                <div class="col-3 w-50 h-25 p-2 card-container">
+                  <div class="card-content">
+                    <img src="assets/images/businessman-talking-phone-background.jpg" class="img-fluid border rounded" alt="{{ 'Creativity' | translate }}">
+                  </div>
+                  <div class="card-text">Hello,world</div>
                 </div>
-                <div class="col-3 w-50 h-25 p-2">
-                    <img [src]="'Passion.Image' | translate" class="img-fluid border rounded" alt="{{ 'Passion' | translate }}">
+                <div class="col-3 w-50 h-25 p-2 card-container">
+                  <div class="card-content">
+                    <img src="assets/images/standard-quality-control-concept-m.jpg" class="img-fluid border rounded" alt="{{ 'Passion' | translate }}">
+                  </div>
+                  <div class="card-text">Hello,world</div>
                 </div>
             </div>
             <p class="space-row">{{ "CoreValues.Description" | translate }}</p>
         </div>
     </div>
 </div>
- 
