--- a/src/app/components/home/proyects/proyects.component.scss
+++ b/src/app/components/home/proyects/proyects.component.scss
@@ -10,11 +10,11 @@ h3 {
     color: $LightestSlate;
 }
 
+
 .space-row {
-    margin: 0 0;
-    padding: 25px;
-    margin-bottom: -1%;
-    font-size: larger;
+  padding: 25px;
+  margin: 0 0 -1%;
+  font-size: larger;
 }
 
 .value-heading {
@@ -33,12 +33,63 @@ h3 {
 }
 
 .empty-space {
-    background-color: $Navy; 
-    height: 50px; 
-    margin: 0; 
-    padding: 0; 
+    background-color: $Navy;
+    height: 50px;
+    margin: 0;
+    padding: 0;
 }
 [dir="rtl"] {
 text-align: right;
 
 }
+
+.cards-holder {
+  display: flex;
+  flex-direction: row;
+
+  .card-container {
+    .card-text{
+      position: absolute !important;
+      color: white !important;
+      left: 50%;
+      top: 50%;
+      text-align: center;
+      font-size: 32px;
+      transform: translate(-50%, -50%);
+    }
+
+    .card-content {
+      img{
+        object-fit: cover;
+        border-radius: 1.25rem !important;
+        height: 145px;
+        width: 100%;
+      }
+
+    }
+
+    .card-content:after {
+      content:'';
+      position:absolute;
+      left:8px; top:8px;
+      width:calc(100% - 16px);
+      height:calc(100% - 16px);
+      display:inline-block;
+      border-radius: 1.25rem !important;
+      background: linear-gradient(0deg, #56789F 0%, rgba(0, 0, 0, 0) 150%);
+    }
+  }
+}
+
+
+@media (max-width: 991px) {
+  .cards-holder {
+    flex-direction: column;
+    .card-container {
+      width: 86% !important;
+      margin: 0 7%;
+      max-width: none !important;
+    }
+  }
+}
+
