--- a/src/app/components/home/more-proyects/more-proyects.component.html
+++ b/src/app/components/home/more-proyects/more-proyects.component.html
@@ -19,7 +19,7 @@
                   </thead>
                   <tbody>
                     <tr>
-                      <th scope="row">31032024_034624الباب الحادي عشر من اللائحة التنفيذية لقانون سوق رأس المال.pdf</th>
+                      <th scope="row">الباب الحادي عشر من اللائحة التنفيذية لقانون سوق رأس المال.pdf</th>
                       <td>2.94Mb</td>
                       <td>27-Apr-2024</td>
                       <td>.PDF</td>
@@ -30,7 +30,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <th scope="row">31032024_034616كتاب دروي رقم 4 بشأن حماية سرية بيانات المتعاملين من الإحتيال.pdf</th>
+                      <th scope="row">كتاب دروي رقم 4 بشأن حماية سرية بيانات المتعاملين من الإحتيال.pdf</th>
                       <td>535.74KB</td>
                       <td>27-Apr-2024</td>
                       <td>.PDF</td>
@@ -41,7 +41,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <th scope="row">31032024_034533كتاب دوري بشأن شراء حق الاكتتاب 2014.pdf</th>
+                      <th scope="row">كتاب دوري بشأن شراء حق الاكتتاب .pdf</th>
                       <td>684.67KB</td>
                       <td>27-Apr-2024</td>
                       <td>.PDF</td>
