--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -14,25 +14,25 @@
                     <div class="card-content">
                       <img src="assets/images/aerial-view-business-team.jpg" class="border rounded" alt="{{ 'Integrity' | translate }}">
                     </div>
-                  <div class="card-text">Hello,world</div>
+                  <div class="card-text">{{ 'Integrity' | translate }}</div>
                 </div>
                 <div class="col-3 w-50 h-25 p-2 card-container">
                   <div class="card-content">
-                    <img src="assets/images/businessman-with-light-bulb-his-hand.jpg" class="border rounded" alt="{{ 'Loyalty' | translate }}">
+                    <img src="assets/images/businessman-with-light-bulb-his-hand.jpg" class="border rounded" alt="{{ 'Professionalism' | translate }}">
                   </div>
-                  <div class="card-text">Hello,world</div>
+                  <div class="card-text">{{ 'Professionalism' | translate }}</div>
                 </div>
                 <div class="col-3 w-50 h-25 p-2 card-container">
                   <div class="card-content">
-                    <img src="assets/images/businessman-talking-phone-background.jpg" class="img-fluid border rounded" alt="{{ 'Creativity' | translate }}">
+                    <img src="assets/images/businessman-talking-phone-background.jpg" class="img-fluid border rounded" alt="{{ 'Entrepreneurship' | translate }}">
                   </div>
-                  <div class="card-text">Hello,world</div>
+                  <div class="card-text">{{ 'Entrepreneurship' | translate }}</div>
                 </div>
                 <div class="col-3 w-50 h-25 p-2 card-container">
                   <div class="card-content">
-                    <img src="assets/images/standard-quality-control-concept-m.jpg" class="img-fluid border rounded" alt="{{ 'Passion' | translate }}">
+                    <img src="assets/images/standard-quality-control-concept-m.jpg" class="img-fluid border rounded" alt="{{ 'Innovation' | translate }}">
                   </div>
-                  <div class="card-text">Hello,world</div>
+                  <div class="card-text">{{ 'Innovation' | translate }}</div>
                 </div>
             </div>
             <p class="space-row">{{ "CoreValues.Description" | translate }}</p>
