--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -25,7 +25,7 @@
 
   <!-- Company Links -->
 <div class="col-md-4">
-  <h4 class="footer-title">{{ 'footer.companyLinks' | translate }}</h4>
+  <div class="footer-title">{{ 'footer.companyLinks' | translate }}</div>
   <div class="footer-links-container">
       <ul class="footer-links">
         <li><a [routerLink]="'/home'">{{ 'Header.Item1' | translate }}</a></li>
@@ -40,13 +40,17 @@
         <li><a [routerLink]="'/agenda'">{{ 'Header.Item7' | translate }}</a></li>
       </ul>
   </div>
-  <h4 class="footer-title">{{ 'footer.social.findUsOn' | translate }}</h4>
+  <div class="footer-title">{{ 'footer.social.findUsOn' | translate }}</div>
   <div class="footer-social-icons">
     <a href="https://www.facebook.com/PioneersSecurities" target="_blank"><i class="fab fa-facebook-f"></i></a>
     <a href="https://x.com/PioSec/" target="_blank" ><i class="fab fa-twitter"></i></a>
+    <a href="hhttps://open.spotify.com/show/4bScgs3LywR2KFj4lotZ3S?si=47dc17ad801f4905" target="_blank"><i class="fab fa-spotify"></i></a>
+    <a href="https://whatsapp.com/channel/0029Va21eln1iUxR3gxiq01l" target="_blank"><i class="fab fa-whatsapp"></i></a>
+    <a href="https://t.me/+qj0TIQiOvihmM2E0" target="_blank"><i class="fab fa-telegram"></i></a>
+    <a href="https://www.tiktok.com/@pioneerssecurities?fbclid=IwY2xjawEm075leHRuA2FlbQIxMAABHX3TWgKXNCzjyxf1W7YBbEwPAFexw1ltgjYuOwqXAcXI9wW7PpJqa2D7rg_aem_3fIWGQsik_WQOyU17yj9tg" target="_blank"><i class="fab fa-tiktok"></i></a>
     <a href="https://www.instagram.com/pioneers.securities/" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://play.google.com/store" target="_blank" ><i class="fab fa-google-play"></i></a>
-    <a href="https://www.apple.com/app-store/" target="_blank"><i class="fab fa-apple"></i></a>
+    <a href="https://play.google.com/store/apps/details?id=tea.mobile.view.pioneersApp&hl=en_US" target="_blank" ><i class="fab fa-google-play"></i></a>
+    <a href="https://apps.apple.com/tc/app/pioneers-egypt/id1196384460" target="_blank"><i class="fab fa-apple"></i></a>
   </div>
 </div>
 
@@ -54,7 +58,7 @@
 
       <!-- Quick Contact Form -->
       <div class="col-md-4">
-        <h4 class="footer-title">{{ 'footer.contactForm.quickContact' | translate }}</h4>
+        <div class="footer-title">{{ 'footer.contactForm.quickContact' | translate }}</div>
         <form class="footer-contact-form">
           <input type="text" placeholder="{{ 'footer.contactForm.name' | translate }}" required>
           <input type="email" placeholder="{{ 'footer.contactForm.email' | translate }}" required>
