--- a/src/app/components/home/stock-market/stock-market.component.scss
+++ b/src/app/components/home/stock-market/stock-market.component.scss
@@ -5,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap; // Ensure wrapping on smaller screens
+    flex-wrap: wrap; 
   }
 
   .col-md-6 {
@@ -96,7 +96,7 @@
 
 .jobs {
   background-color: $Navy;
-
+  
   .jobs-inner {
     background-color: #fff;
     margin-top: 5%;
