--- a/src/app/components/home/proyects/proyects.component.html
+++ b/src/app/components/home/proyects/proyects.component.html
@@ -1,6 +1,7 @@
-<!-- <div class="empty-space"></div> -->
+
 <div class="jobs" [dir]="'Direction' | translate">
     <div class="container">
+      <div class="empty-space"></div>
         <!-- <div class="container">
             <h3 class="section-title">
                {{"CoreValues.Title" | translate}}
@@ -35,7 +36,7 @@
                   <div class="card-text">{{ 'Innovation' | translate }}</div>
                 </div>
             </div>
-            <p class="space-row">{{ "CoreValues.Description" | translate }}</p>
+            <p class="space-row" style="color: black;">{{ "CoreValues.Description" | translate }}</p>
         </div>
     </div>
 </div>
