--- a/src/app/components/home/banner/banner.component.css
+++ b/src/app/components/home/banner/banner.component.css
@@ -44,8 +44,8 @@
 
 .clickable-photo-container {
   position: absolute; 
-  bottom: 20px; 
-  left: 58%; 
+  bottom: 35vw; 
+  left: 48%; 
   z-index: 5; 
   display: flex;
   flex-direction: column;
@@ -56,13 +56,15 @@
   width: 150px; 
   height: auto;
 }
-
 @media (max-width: 768px) {
   .clickable-photo img {
-    width: 100px; 
+    width: 120px !important; 
   }
+}
+@media (max-width: 768px) {
+  
   .empty-space {
-    margin-top: 250px;
+    margin-top: 100px;
   }
   .second-photo {
     margin-top: 0;
@@ -77,15 +79,24 @@
 
 @media (max-width: 1000px) {
   .empty-space {
-    margin-top: 230px;
+    margin-top: 170px;
   }
 }
-
+@media (max-width: 1700px) {
+  .clickable-photo img {
+    width: 150px; 
+  }
+}
+@media (max-width: 2800px) {
+  .clickable-photo img {
+    width: 200px; 
+  }
+}
 @media (max-width: 576px) {
   .clickable-photo img {
-    width: 60px; 
+    width: 70px !important; 
   }
   .empty-space {
-    margin-top: 250px;
+    margin-top: 200px;
   }
 }
