--- a/src/app/components/home/full-about/full-about.component.scss
+++ b/src/app/components/home/full-about/full-about.component.scss
@@ -2,17 +2,17 @@
 
 .jobs {
     background-color: $Navy;
-    
+    padding-top: 7%;
     .jobs-inner {
-        background-color: #fff;
-        
+      background-color: #fff;
+    //   margin-bottom: -5%;
     }
-}
+  }
 
-.about-details {
+  .about-details {
     h1 {
         color: $LightNavy;
-        //  font-family: 'Open Sans';
+        // font-family: 'Times New Roman', Times, serif;
     }
     p {
         color: #000;
