--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,8 +4,8 @@
 
     <app-about></app-about>
     <app-proyects></app-proyects>
-    <app-more-proyects></app-more-proyects>
-    
+    <!-- <app-more-proyects></app-more-proyects>
+     -->
     
     
     
