--- a/src/variables.scss
+++ b/src/variables.scss
@@ -10,5 +10,6 @@ $White        : #191e25;
 $Green        : #40af95;
 $GreenOpacity : rgba(100,255,218,0.07);
 $NavyBack : #274264;
+$NavyText : rgb(9, 71, 112);
 $MainFont: Calibre,San Francisco,SF Pro Text,-apple-system,system-ui,BlinkMacSystemFont,Roboto,Helvetica Neue,Segoe UI,Arial,sans-serif;
-$CodeFont: SF Mono, Fira Code, Fira Mono, Roboto Mono, Lucida Console, Monaco, Monospace;
+$CodeFont: sans-serif;
